<resources>
    <string name="app_name">HTTP Shortcuts</string>
    <string name="shortcuts">My Shortcuts</string>
    <string name="shortcut_safe_name">Shortcut</string>
    <string name="edit_shortcut">Edit Shortcut</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="icon_description">Icon</string>
    <string name="label_name">Shortcut Name</string>
    <string name="label_description">Description</string>
    <string name="label_url">URL</string>
    <string name="label_mac_address">MAC Address</string>
    <string name="label_broadcast_address">Broadcast Address</string>
    <string name="label_browser_package_name">Browser</string>
    <string name="placeholder_browser_package_name">Use default browser</string>
    <string name="option_browser_custom_tab">Use Custom Tab</string>
    <string name="option_custom_browser_in_custom_tab">%s (Custom Tab)</string>
    <string name="save_button">Save</string>
    <string name="test_button">Test</string>
    <string name="label_method">Method</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_auth_token">Token</string>
    <string name="label_response_on_success">On Success</string>
    <string name="label_response_type_selection">Response Type</string>
    <string name="label_response_message_type_selection">Message Type</string>
    <string name="label_response_on_failure">On Failure</string>
    <string name="label_include_meta_information">Show Meta Information</string>
    <string name="label_enable_javascript_in_webview">Enable JavaScript (experimental)</string>
    <string name="subtitle_enable_javascript_in_webview">Allows the use of JavaScript in the displayed HTML response body. This may not work for some web pages.</string>
    <string name="label_monospace_response">Display text using a monospace font</string>
    <string name="subtitle_include_meta_information">Response Headers, Status Code, …</string>
    <string name="action_place">Place on Home Screen</string>
    <string name="action_place_category">Place on Home Screen</string>
    <string name="action_run">Execute</string>
    <string name="action_select">Select</string>
    <string name="action_edit">Edit</string>
    <string name="action_manage_sections">Manage Sections</string>
    <string name="action_duplicate">Duplicate</string>
    <string name="action_delete">Delete</string>
    <string name="action_export">Export</string>
    <string name="dialog_button_export">Export</string>
    <string name="action_shortcut_information">Show Info</string>
    <string name="action_move">Move</string>
    <string name="message_moving_enabled">Re-order shortcuts by dragging them.</string>
    <string name="title_export_shortcut_as">Export as…</string>
    <string name="action_export_as_curl">cURL Command</string>
    <string name="action_export_as_file">File</string>
    <string name="empty_state_shortcuts">You don\’t have any shortcuts yet.</string>
    <string name="empty_state_shortcuts_instructions">A shortcut allows you to send a single HTTP request, optionally processing and displaying the response.\n\nClick the + button to get started, or check out the [Documentation].</string>
    <string name="empty_state_no_shortcuts_in_category">no shortcuts yet in this category</string>
    <string name="empty_state_trigger_shortcuts">You haven\’t added any shortcuts to trigger yet.</string>
    <string name="empty_state_trigger_shortcuts_instructions">Add all the shortcuts to this list that you want to trigger as part of this multi-shortcut.\n\nClick the + button to get started.</string>
    <string name="empty_state_variables">You don\’t have any global variables yet.</string>
    <string name="empty_state_variables_instructions">Variables allow you to dynamically insert values into your shortcuts, e.g., into the URL, headers or request body. Look for the \“{}\” button when editing a shortcut to find all the places where a variable placeholder can be inserted.\n\nClick the + button to add a new global variable.</string>
    <string name="confirm_delete_shortcut_message">Delete this shortcut?</string>
    <string name="confirm_discard_changes_message">You have unsaved changes. Discard changes?</string>
    <string name="dialog_discard">Discard</string>
    <string name="title_activity_execute">Execute Shortcut</string>
    <string name="executed">%s executed.</string>
    <string name="shortcut_not_found">Shortcut not found. You might have to re-add it to the home screen.</string>
    <string name="error_shortcut_deleted">This shortcut was deleted.</string>
    <string name="validation_name_not_empty">Please enter a name.</string>
    <string name="validation_url_invalid">Please enter an HTTP(S) url.</string>
    <string name="validation_mac_address_invalid">Please enter a valid MAC address.</string>
    <string name="validation_mqtt_server_url_invalid">Please enter a valid MQTT server URL.</string>
    <string name="error_http">%1$s failed with status code %2$d (%3$s).</string>
    <string name="error_other">%1$s failed: %2$s</string>
    <string name="error_response_too_large">Response too large to display (limit is %s)</string>
    <string name="error_set_image">Failed to use image as icon.</string>
    <string name="template_shortcut_name_copy">%1$s (copy)</string>
    <string name="change_icon">Change Icon</string>
    <string name="choose_image">Custom Image</string>
    <string name="choose_page_favicon">Fetch Page Favicon</string>
    <string name="choose_icon">Built-In Icon</string>
    <string name="title_choose_icon">Choose Built-In Icon</string>
    <string name="title_custom_icons">Custom Icons</string>
    <string name="title_post_param_edit">Edit Parameter</string>
    <string name="title_post_param_edit_file">Edit File Parameter</string>
    <string name="title_post_param_add">Add Parameter</string>
    <string name="title_post_param_add_file">Add File Parameter</string>
    <string name="label_post_param_key">Parameter Name</string>
    <string name="label_post_param_file_name">File Name (optional)</string>
    <string name="label_post_param_value">Value</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_remove">Remove</string>
    <string name="section_request_headers">Request Headers</string>
    <string name="section_mqtt_messages">Messages</string>
    <string name="section_request_body">Request Body / Parameters</string>
    <string name="title_custom_header_edit">Edit Header</string>
    <string name="title_custom_header_add">Add Header</string>
    <string name="label_custom_header_key">Header</string>
    <string name="label_custom_header_value">Value</string>
    <string name="label_custom_body">Request Body</string>
    <string name="label_mqtt_topic">Topic</string>
    <string name="label_mqtt_payload">Payload</string>
    <string name="title_mqtt_message_edit">Edit Message</string>
    <string name="title_mqtt_message_add">Add Message</string>
    <string name="instructions_mqtt_url">The URL must start with tcp:// or ssl://</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">Information</string>
    <string name="menu_action_unlock_app">Unlock</string>
    <string name="menu_action_lock_app">Lock</string>
    <string name="settings_title_basic">Basic Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_click_behavior">Shortcut Click Action</string>
    <string name="title_import_export">Import / Export</string>
    <string name="label_timeout">Timeout</string>
    <string name="label_proxy_host">Proxy Hostname / IP Address</string>
    <string name="label_proxy_port">Proxy Port</string>
    <string name="label_client_cert">Client Certificate Authentication</string>
    <string name="settings_changelog">Changelog</string>
    <string name="settings_mail">Contact Developer</string>
    <string name="settings_mail_summary">Questions, feature requests, feedback, …</string>
    <string name="settings_github">View on GitHub</string>
    <string name="settings_github_summary">That\’s right, this app is open-source</string>
    <string name="label_wait_for_connection">Wait for connection when offline</string>
    <string name="settings_play_store">View in Play Store</string>
    <string name="settings_play_store_summary">Thank you for your ratings and reviews</string>
    <string name="settings_f_droid">View in F-Droid</string>
    <string name="settings_f_droid_summary">Check for updates</string>
    <string name="settings_documentation">Documentation</string>
    <string name="settings_documentation_summary">FAQ, references, examples, …</string>
    <string name="settings_licenses">Acknowledgements</string>
    <string name="settings_licenses_summary">Translators, code contributors, libraries &amp; resources</string>
    <string name="title_categories">Categories</string>
    <string name="placeholder_category_name">Enter Category Name…</string>
    <string name="title_variables">Global Variables</string>
    <string name="label_select_variable_separator">Separator</string>
    <string name="button_add_select_option">Add option</string>
    <string name="section_select_options">Selectable Options</string>
    <string name="label_remember_value">Remember value</string>
    <string name="label_select_variable_multi_select">Allow selecting multiple options</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_privacy_policy_summary">Nope, not stealing your data</string>
    <string name="label_variable_slider_min">Minimum</string>
    <string name="label_variable_slider_max">Maximum</string>
    <string name="label_variable_slider_step">Step Size</string>
    <string name="label_follow_redirects">Follow redirects</string>
    <string name="label_accept_cookies">Store cookies</string>
    <string name="label_pre_request_script">Run before Execution</string>
    <string name="label_post_request_success_script">Run on Success</string>
    <string name="label_post_request_failure_script">Run on Failure</string>
    <string name="button_add_code_snippet">Add Code Snippet</string>
    <string name="placeholder_javascript_code_before">Add JavaScript code here to run before the shortcut is executed, e.g., to prepare some variables.</string>
    <string name="placeholder_javascript_code_success">Add JavaScript code here to run after the shortcut is executed, e.g., to process the response.</string>
    <string name="placeholder_javascript_code_failure">Add JavaScript code here to run in case the request fails.</string>
    <string name="label_ssid">Required Wi-Fi SSID</string>
    <string name="message_permission_rational">To check the name (SSID) of the current Wi-Fi network, location services need to be enabled and the app needs to be granted the location permission. This is a requirement imposed by the Android OS. Your location data is not accessed directly. See the Privacy Policy for details.</string>
    <string name="label_shortcut_id">Shortcut ID</string>
    <string name="label_deep_link_url">Deep-Linking URL</string>
    <string name="message_deep_link_instructions">You can trigger this shortcut by invoking this URL from another app, e.g., via a QR scanner or NFC reader. Append query parameters to the URL to pass variable values.</string>
    <string name="label_category_name">Category Name</string>
    <string name="label_category_layout_type">Layout Type</string>
    <string name="label_category_background">Background</string>
    <string name="settings_help_translate">Become a Translator</string>
    <string name="settings_help_translate_summary">Help me make this app better by translating it into your language!</string>
    <string name="title_event_history">Event History</string>
</resources>