<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory>

        <Preference
            app:icon="@drawable/ic_version"
            app:key="changelog"
            app:title="@string/settings_changelog" />

        <Preference
            app:icon="@drawable/ic_faq"
            app:key="documentation"
            app:summary="@string/settings_documentation_summary"
            app:title="@string/settings_documentation" />

        <Preference
            app:icon="@drawable/ic_privacy_policy"
            app:key="privacy_policy"
            app:summary="@string/settings_privacy_policy_summary"
            app:title="@string/settings_privacy_policy" />

        <Preference
            app:icon="@drawable/ic_email_outline"
            app:key="mail"
            app:summary="@string/settings_mail_summary"
            app:title="@string/settings_mail" />

        <Preference
            app:icon="@drawable/ic_google_play"
            app:key="play_store"
            app:summary="@string/settings_play_store_summary"
            app:title="@string/settings_play_store" />

        <Preference
            app:icon="@drawable/ic_f_droid"
            app:key="f_droid"
            app:summary="@string/settings_f_droid_summary"
            app:title="@string/settings_f_droid" />

        <Preference
            app:icon="@drawable/ic_github_circle"
            app:key="github"
            app:summary="@string/settings_github_summary"
            app:title="@string/settings_github" />

        <Preference
            app:icon="@drawable/ic_translate"
            app:key="translate"
            app:summary="@string/settings_help_translate_summary"
            app:title="@string/settings_help_translate" />

        <Preference
            app:icon="@drawable/ic_acknowledgments"
            app:key="acknowledgments"
            app:summary="@string/settings_licenses_summary"
            app:title="@string/settings_licenses" />

    </PreferenceCategory>

</PreferenceScreen>