<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/title_categories"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_variables"
        android:icon="@drawable/ic_variables"
        android:title="@string/title_variables"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_export"
        android:icon="@drawable/ic_import"
        android:title="@string/title_import_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_event_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/title_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unlock"
        android:icon="@drawable/ic_lock"
        android:title="@string/menu_action_unlock_app"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
