<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        style="@style/SubHeader"
        android:text="@string/section_select_options"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/select_options_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/select_options_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_select_option"/>

    <TextView
        style="@style/SubHeader"
        android:text="@string/section_input_options" />

    <CheckBox
        android:id="@+id/input_multi_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_select_variable_multi_select" />

    <TextView
        style="@style/Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_select_variable_separator" />

    <EditText
        android:id="@+id/input_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:maxLength="20"
        android:maxLines="1" />

</LinearLayout>