<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/SubHeader"
        android:text="@string/section_input_options" />

    <TextView
        style="@style/Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_variable_slider_min" />

    <EditText
        android:id="@+id/input_slider_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLines="1" />

    <TextView
        style="@style/Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_variable_slider_max" />

    <EditText
        android:id="@+id/input_slider_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLines="1" />

    <TextView
        style="@style/Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_variable_slider_step" />

    <EditText
        android:id="@+id/input_slider_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLines="1" />

    <CheckBox
        android:id="@+id/input_remember_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_remember_value" />

</LinearLayout>