<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        style="@style/Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_shortcut_id" />

    <TextView
        android:id="@+id/shortcut_id"
        style="@style/Copyable" />

    <TextView
        style="@style/Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_deep_link_url" />

    <TextView
        android:id="@+id/deep_link_url"
        style="@style/Copyable" />

    <TextView
        style="@style/InfoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_deep_link_instructions" />

</LinearLayout>