<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/label_code_prepare"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_pre_request_script" />

            <ch.rmy.android.http_shortcuts.views.ResilientEditText
                android:id="@+id/input_code_prepare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="top"
                android:hint="@string/placeholder_javascript_code_before"
                android:inputType="textMultiLine|textNoSuggestions"
                android:minLines="6"
                android:textSize="@dimen/js_font_size" />

            <Button
                android:id="@+id/button_add_code_snippet_pre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_add_code_snippet" />

            <LinearLayout
                android:id="@+id/container_post_request_scripting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/label_post_request_success_script" />

                <ch.rmy.android.http_shortcuts.views.ResilientEditText
                    android:id="@+id/input_code_success"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:gravity="top"
                    android:hint="@string/placeholder_javascript_code_success"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:minLines="6"
                    android:textSize="@dimen/js_font_size" />

                <Button
                    android:id="@+id/button_add_code_snippet_success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_add_code_snippet" />

                <TextView
                    style="@style/Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/label_post_request_failure_script" />

                <ch.rmy.android.http_shortcuts.views.ResilientEditText
                    android:id="@+id/input_code_failure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:gravity="top"
                    android:hint="@string/placeholder_javascript_code_failure"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:minLines="6"
                    android:textSize="@dimen/js_font_size" />

                <Button
                    android:id="@+id/button_add_code_snippet_failure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_add_code_snippet" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>