<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <CheckBox
                android:id="@+id/input_wait_for_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_wait_for_connection" />

            <CheckBox
                android:id="@+id/input_follow_redirects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_follow_redirects" />

            <CheckBox
                android:id="@+id/input_accept_cookies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_accept_cookies" />

            <include layout="@layout/divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/label_ssid"
                    style="@style/Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ssid" />

                <EditText
                    android:id="@+id/input_ssid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <TextView
                    style="@style/InfoLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message_permission_rational" />

            </LinearLayout>

            <include layout="@layout/divider_line" />

            <ch.rmy.android.http_shortcuts.views.PanelButton
                android:id="@+id/input_timeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_timeout" />

            <include layout="@layout/divider_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/label_proxy_host"
                    style="@style/Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_proxy_host" />

                <ch.rmy.android.http_shortcuts.variables.VariableEditText
                    android:id="@+id/input_proxy_host"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/label_proxy_host"
                    android:inputType="textNoSuggestions"
                    android:lines="1"
                    android:paddingRight="@dimen/variable_button_spacing" />

                <ch.rmy.android.http_shortcuts.variables.VariableButton
                    android:id="@+id/variable_button_proxy_host"
                    style="@style/VariableButton"
                    android:layout_below="@+id/label_proxy_host"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    style="@style/Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_proxy_port" />

                <EditText
                    android:id="@+id/input_proxy_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:inputType="number" />

            </LinearLayout>

            <include layout="@layout/divider_line" />

            <ch.rmy.android.http_shortcuts.views.PanelButton
                android:id="@+id/button_client_cert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/label_client_cert" />

            <CheckBox
                android:id="@+id/input_accept_certificates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_accept_all_certificates" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>